# ps

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: format.yml  release.yml
assets/benchmark/: 柱形图.xlsx
benches/: performance.rs
not for now/benches/: performance.rs
src/: App.vue  lib.rs  main.rs  mod.rs
src-tauri/: tauri.conf.json
src/app/: app.rs  component.rs  error.rs  file_dialog.rs  image_box.rs  message.rs  mod.rs  page.rs  settings.rs  utils.rs
src/app/component/: canvas.rs  image_box.rs  mod.rs  toolbar.rs
src/app/shapes/: mod.rs
src/common/: button.rs  custom_box.rs  custom_element.rs  mod.rs  style.rs
src/components/: HelloPS.vue
src/io/: dialogs.rs  last_place.rs
src/ui/: curve.rs  edit.rs  icons.rs  page.rs  shape.rs  style.rs  toolbar.rs  utils.rs  viewer.rs  welcome.rs
src/ui/shapes/: mod.rs
