[package]
name = "ps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = [
    "image",
    "debug",
    "tokio",
    "svg",
    "canvas",
] }
iced_native = { git = "https://github.com/iced-rs/iced" }

native-dialog = "0.6.2"
svg = "0.10.0"
chrono = "0.4.19"
dyn-clone = "1.0.5"

# serde_with = "1.13.0"
# serde = { version = "1.0.63", features = ["derive"] }
# serde_json = "1.0.79"
# erased-serde = "0.3.20"

# app_dirs2 = "2.4.0"
