[package]
name = "ps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
iced = { version = "0.4.2", features = [
    "iced_glow",
    "debug",
    "image",
    "svg",
    "tokio",
    "canvas",
    "pure"
] }
iced_native = "0.5.1"

native-dialog = "0.6.2"
svg = "0.10.0"
chrono = "0.4.19"

serde_with = "1.13.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

app_dirs2 = "2.4.0"
enum_dispatch = "0.3.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "performance"
harness = false
